docs: update
Issue on multipart/form-data:
https://github.com/swaggo/swag/pull/2157
